@@ -1263,13 +1263,7 @@ mplist_put_func (MPlist *plist, MSymbol key, M17NFunc func)
 M17NFunc
 mplist_get_func (MPlist *plist, MSymbol key)
 {
-  while (1)
-    {
-      MPLIST_FIND (plist, key);
-      if (MPLIST_TAIL_P (plist) || MPLIST_VAL_FUNC_P (plist))
-	break;
-      plist = MPLIST_NEXT (plist);
-    };
+  MPLIST_FIND (plist, key);
   return (MPLIST_TAIL_P (plist) ? NULL : MPLIST_FUNC (plist));
 }
 
